gccida/g0/replace_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_reg/src/reg-stack.c:1309:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_reg/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_reg/src/reg-stack.c:1313:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v2 = mode_class_0[*( ( unsigned __int8 *)*reg + 2)]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_reg/src/obj/reg-stack.o] Error 1
